<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <LinearLayout
        android:id="@+id/ll_time_base"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="26dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp">

        <TextView
            android:id="@+id/tv_clock_base"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="33dp"
            android:textColor="#FFFFFF"
            android:text="@string/clock_base"/>

        <TextView
            android:id="@+id/tv_date_base"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10dp"
            android:textColor="#FFFFFF"
            android:text="@string/date_base"
           />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:textColor="#FFFFFF"
            android:text="@string/name_base"
            android:layout_marginTop="2dp"
           />

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/ll_weather_base"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="32dp"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="horizontal">
        
        <ImageView
            android:id="@+id/iv_weather_base"
            android:layout_width="80dp"
            android:layout_height="76dp"
            android:src="@drawable/icon_weather"/>
        
        <LinearLayout
            android:id="@+id/ll_weather_location_base"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            
            <TextView
                android:id="@+id/tv_temp_base"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                android:textColor="#FFFFFF"
                android:textSize="20dp"/>

            <TextView
                android:id="@+id/tv_weather_base"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weather"
                android:textColor="#FFFFFF"
                android:textSize="10dp"/>

            <TextView
                android:id="@+id/tv_location_base"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textColor="#FFFFFF"
                android:textSize="10dp"/>


        </LinearLayout>
        
    </LinearLayout>






</android.support.constraint.ConstraintLayout>