<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="390dp"
    android:layout_marginLeft="38dp"
    android:layout_marginRight="38dp"
    android:background="@drawable/shape_corner_white">


    <RelativeLayout
        android:id="@+id/rl_dismiss_notice_layout"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_alignParentRight="true"
        android:background="@drawable/shape_notification_dismiss">

        <ImageView
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_centerInParent="true"
            android:src="@drawable/icon_delete" />

    </RelativeLayout>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/guider"
        android:src="@drawable/bg_forest" />

    <TextView
        android:id="@+id/tv_title_notice_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/title_notification"
        android:textColor="#333333"
        />


    <ScrollView
        android:id="@+id/sv_notice_layout"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_below="@id/tv_title_notice_layout"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tv_content_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification_content_dialog"
            android:textColor="#666666"
            />

    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_lib_name_notice_layout"
            android:text="@string/library_name"
            style="@style/TvDialog" />

        <TextView
            android:id="@+id/tv_time_notice_layout"
            android:text="@string/time_notification"
            style="@style/TvDialog"/>

    </LinearLayout>


</RelativeLayout>