<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:baselineAligned="false"
    android:id="@+id/ll_book_holding_item">

    <RelativeLayout
        style="@style/RlItemHoldingContainer"
        android:layout_weight="2">

        <TextView
            android:id="@+id/tv_barcode_item_book_holding"
            style="@style/TvBookInfoBookDetailsItem"
            android:text="@string/book_barcode"
            android:layout_centerInParent="true"/>
    </RelativeLayout>


    <RelativeLayout
        style="@style/RlItemHoldingContainer"
        android:layout_weight="4">

        <TextView
            android:id="@+id/tv_location_item_book_holding"
            style="@style/TvBookInfoBookDetailsItem"
            android:maxLines="3"
            android:text="@string/book_location"
            android:layout_centerInParent="true"/>
    </RelativeLayout>


    <RelativeLayout
        style="@style/RlItemHoldingContainer"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tv_status_item_book_holding"
            style="@style/TvBookInfoBookDetailsItem"
            android:text="@string/book_status"
            android:layout_centerInParent="true"/>
    </RelativeLayout>







</LinearLayout>