<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="4dp"
        android:layout_height="4dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="6dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="6dp"
        android:background="#F8B551"/>

    <TextView
        android:id="@+id/tv_key_base"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        android:text="@string/hot_book_title"
        android:textColor="@android:color/white"
        android:textSize="12sp" />

    <CheckBox
        android:id="@+id/cb_can_loan"
        style="@style/CbCanloan"/>


    <LinearLayout
        android:id="@+id/ll_back_press_base"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="12dp"
            android:layout_height="14dp"
            android:src="@drawable/icon_backpress"
            android:contentDescription="@string/guider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:text="@string/back_press"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            />

    </LinearLayout>


</LinearLayout>